--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
     </parent>
     <groupId>mandelbrotBeleg</groupId>
     <artifactId>mandelbrotServer</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>server</version>
     <name>mandelbrotServer</name>
     <description>mandelbrotServer</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
         <repackage.classifier/>
         <spring-native.version>0.11.5</spring-native.version>
     </properties>
@@ -80,8 +80,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
